# codegraph

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  experiments.yaml  settings.py
datasets/: repos.yaml  swe_bench.py
datasets/queries/: sample.json
evaluation/: __init__.py  ablation.py  efficiency.py  judge.py  metrics.py  statistics.py
graph_builder/: __init__.py  code_graph.py  edge_types.py  graph_utils.py
indexer/: __init__.py  bm25_index.py  fallback_vector_index.py  page_index.py  symbol_index.py  vector_index.py
llm_interface/: __init__.py  llm_client.py
parser/: __init__.py  languages.py  symbol_extractor.py  tree_sitter_parser.py
query_engine/: __init__.py  context_builder.py  prompt_templates.py  query_processor.py
retriever/: __init__.py  base_retriever.py  hybrid_retriever.py  query_rewriter.py  vector_retriever.py  vectorless_retriever.py
scripts/: run_experiment.py
tests/: test_evaluation.py  test_graph.py  test_parser.py  test_retriever.py  test_statistics.py
