[project]
name = "code-graph-rag"
version = "0.2.0"
description = "Local RAG for codebases, fully powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "networkx>=3.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5",
    "chromadb>=0.5.0",
    "ollama>=0.4.7",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tqdm>=4.66",
    "psutil>=5.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cgrag = "main:cli"

[tool.setuptools]
packages = ["config", "parser", "indexer", "graph_builder", "retriever", "query_engine", "llm_interface"]
